[package]
name = "cowboy"
version = "0.1.9"
edition = "2024"
license = "MIT"
description = "Safe & convenient container for quick prototyping."
authors = ["Andre Popovitch <andre@popovit.ch>"]
repository = "https://github.com/anchpop/tysm"

[features]
evil = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
